# CPS

./: .gitignore  Cargo.toml  Changelog.md  README.md
.github/workflows/: ci.yml
src/: README.md  cps_macro.rs  cps_proc_macro.rs  lib.rs  parse_cps_input.rs  parse_macro_decl.rs  std_macros.rs
src/std_macros/: concat.rs  include.rs  include_str.rs  stringify.rs
tests/: dualbinding_tests.rs  dualmacro_tests.rs  error_message_check.rs  inbuilt_macros_tests.rs  manybinding_tests.rs  monobinding_tests.rs  morphbinding_tests.rs  mutual_recursion_tests.rs  test_file.txt  unbound.rs  unmodified_tests.rs
